--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "led_blink",
   "version": "1.0.0",
-  "description": "",
+  "description": "Our first stab at doing something on a raspberry pi",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
